--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <nav class="main-nav">
                 <a class="logo header-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
                 <ul class="menu">
-                    <li class="menu-item"><a class="menu-link" href="./index.html">Studio</a></li>
+                    <li class="menu-item"><a class="menu-link current" href="./index.html">Studio</a></li>
                     <li class="menu-item"><a class="menu-link" href="">Portfolio</a></li>
                     <li class="menu-item"><a class="menu-link" href="">Contacts</a></li>
                 </ul>
