--- a/index.html
+++ b/index.html
@@ -54,22 +54,42 @@
               <h2 class="visually-hidden">Features</h2>
               <ul class="features-list">
                   <li class="features-list-item">
+                      <div class="feature-icon">
+                          <svg width="64" height="64">
+                              <use href="./images/icons/icomoon.svg#icon-antenna"></use>
+                          </svg>
+                      </div>
                       <h3 class="feature-title">Strategy</h3>
                       <p class="feature-text">Our goal is to identify the business problem to walk away with the perfect
                           and
                           creative solution.</p>
                   </li>
                   <li class="features-list-item">
+                      <div class="feature-icon">
+                          <svg width="64" height="64">
+                              <use href="./images/icons/icomoon.svg#icon-clock"></use>
+                          </svg>
+                      </div>
                       <h3 class="feature-title">Punctuality</h3>
                       <p class="feature-text">Bring the key message to the brand's audience for the best price within
                           the
                           shortest possible time.</p>
                   </li>
                   <li class="features-list-item">
+                      <div class="feature-icon">
+                          <svg width="64" height="64">
+                              <use href="./images/icons/icomoon.svg#icon-diagram"></use>
+                          </svg>
+                      </div>
                       <h3 class="feature-title">Diligence</h3>
                       <p class="feature-text">Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
                   </li>
                   <li class="features-list-item">
+                      <div class="feature-icon">
+                          <svg width="64" height="64">
+                              <use href="./images/icons/icomoon.svg#icon-astronaut"></use>
+                          </svg>
+                      </div>
                       <h3 class="feature-title">Technologies</h3>
                       <p class="feature-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                   </li>
