--- a/index.html
+++ b/index.html
@@ -107,6 +107,36 @@
                       <div class="team-member-content">
                           <h3 class="team-member-name">Mark Guerrero</h3>
                           <p class="team-member-position">Product Designer</p>
+                          <ul class="team-member-social-list">
+                              <li>
+                                  <a class="team-member-social-link" href="https://www.instagram.com/" target="_blank">
+                                      <svg width="16" height="16">
+                                          <use href="./images/icons/icomoon.svg#icon-instagram"></use>
+                                      </svg>
+                                  </a>
+                              </li>
+                              <li>
+                                  <a class="team-member-social-link" href="https://x.com/" target="_blank">
+                                      <svg width="16" height="16">
+                                          <use href="./images/icons/icomoon.svg#icon-twitter"></use>
+                                      </svg>
+                                  </a>
+                              </li>
+                              <li>
+                                  <a class="team-member-social-link" href="https://www.facebook.com/" target="_blank">
+                                      <svg width="16" height="16">
+                                          <use href="./images/icons/icomoon.svg#icon-facebook"></use>
+                                      </svg>
+                                  </a>
+                              </li>
+                              <li>
+                                  <a class="team-member-social-link" href="https://www.linkedin.com/" target="_blank">
+                                      <svg width="16" height="16">
+                                          <use href="./images/icons/icomoon.svg#icon-linkedin"></use>
+                                      </svg>
+                                  </a>
+                              </li>
+                          </ul>
                       </div>
                   </li>
                   <li class="team-list-item">
@@ -115,6 +145,36 @@
                       <div class="team-member-content">
                           <h3 class="team-member-name">Tom Ford</h3>
                           <p class="team-member-position">Frontend Developer</p>
+                          <ul class="team-member-social-list">
+                              <li>
+                                  <a class="team-member-social-link" href="https://www.instagram.com/" target="_blank">
+                                      <svg width="16" height="16">
+                                          <use href="./images/icons/icomoon.svg#icon-instagram"></use>
+                                      </svg>
+                                  </a>
+                              </li>
+                              <li>
+                                  <a class="team-member-social-link" href="https://x.com/" target="_blank">
+                                      <svg width="16" height="16">
+                                          <use href="./images/icons/icomoon.svg#icon-twitter"></use>
+                                      </svg>
+                                  </a>
+                              </li>
+                              <li>
+                                  <a class="team-member-social-link" href="https://www.facebook.com/" target="_blank">
+                                      <svg width="16" height="16">
+                                          <use href="./images/icons/icomoon.svg#icon-facebook"></use>
+                                      </svg>
+                                  </a>
+                              </li>
+                              <li>
+                                  <a class="team-member-social-link" href="https://www.linkedin.com/" target="_blank">
+                                      <svg width="16" height="16">
+                                          <use href="./images/icons/icomoon.svg#icon-linkedin"></use>
+                                      </svg>
+                                  </a>
+                              </li>
+                          </ul>
                       </div>
                   </li>
                   <li class="team-list-item">
@@ -123,6 +183,36 @@
                       <div class="team-member-content">
                           <h3 class="team-member-name">Camila Garcia</h3>
                           <p class="team-member-position">Marketing</p>
+                          <ul class="team-member-social-list">
+                              <li>
+                                  <a class="team-member-social-link" href="https://www.instagram.com/" target="_blank">
+                                      <svg width="16" height="16">
+                                          <use href="./images/icons/icomoon.svg#icon-instagram"></use>
+                                      </svg>
+                                  </a>
+                              </li>
+                              <li>
+                                  <a class="team-member-social-link" href="https://x.com/" target="_blank">
+                                      <svg width="16" height="16">
+                                          <use href="./images/icons/icomoon.svg#icon-twitter"></use>
+                                      </svg>
+                                  </a>
+                              </li>
+                              <li>
+                                  <a class="team-member-social-link" href="https://www.facebook.com/" target="_blank">
+                                      <svg width="16" height="16">
+                                          <use href="./images/icons/icomoon.svg#icon-facebook"></use>
+                                      </svg>
+                                  </a>
+                              </li>
+                              <li>
+                                  <a class="team-member-social-link" href="https://www.linkedin.com/" target="_blank">
+                                      <svg width="16" height="16">
+                                          <use href="./images/icons/icomoon.svg#icon-linkedin"></use>
+                                      </svg>
+                                  </a>
+                              </li>
+                          </ul>
                       </div>
                   </li>
                   <li class="team-list-item">
@@ -131,6 +221,36 @@
                       <div class="team-member-content">
                           <h3 class="team-member-name">Daniel Wilson</h3>
                           <p class="team-member-position">UI Designer</p>
+                          <ul class="team-member-social-list">
+                              <li>
+                                  <a class="team-member-social-link" href="https://www.instagram.com/" target="_blank">
+                                      <svg width="16" height="16">
+                                          <use href="./images/icons/icomoon.svg#icon-instagram"></use>
+                                      </svg>
+                                  </a>
+                              </li>
+                              <li>
+                                  <a class="team-member-social-link" href="https://x.com/" target="_blank">
+                                      <svg width="16" height="16">
+                                          <use href="./images/icons/icomoon.svg#icon-twitter"></use>
+                                      </svg>
+                                  </a>
+                              </li>
+                              <li>
+                                  <a class="team-member-social-link" href="https://www.facebook.com/" target="_blank">
+                                      <svg width="16" height="16">
+                                          <use href="./images/icons/icomoon.svg#icon-facebook"></use>
+                                      </svg>
+                                  </a>
+                              </li>
+                              <li>
+                                  <a class="team-member-social-link" href="https://www.linkedin.com/" target="_blank">
+                                      <svg width="16" height="16">
+                                          <use href="./images/icons/icomoon.svg#icon-linkedin"></use>
+                                      </svg>
+                                  </a>
+                              </li>
+                          </ul>
                       </div>
                   </li>
               </ul>
