Add portfolio item ovelay

--- a/index.html
+++ b/index.html
@@ -262,8 +262,11 @@
               <h2 class="portfolio-title">our portfolio</h2>
               <ul class="portfolio-list">
                   <li class="portfolio-item">
-                      <img class="portfolio-item-image" src="./images/portfolio/banking-app.jpg" width="360"
-                           alt="Banking App">
+                      <div class="portfolio-thumb">
+                          <img class="portfolio-item-image" src="./images/portfolio/banking-app.jpg" width="360" alt="Banking App">
+                          <p class="portfolio-item-description">14 Stylish and User-Friendly App Design Concepts · Task
+                              Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                      </div>
                       <div class="portfolio-item-content">
                           <h3 class="portfolio-item-name">Banking App</h3>
                           <p class="portfolio-item-category">App</p>
