--- a/index.html
+++ b/index.html
@@ -320,9 +320,44 @@
     </main>
 
     <footer class="page-footer">
-        <div class="container">
-            <a class="logo footer-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
-            <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <div class="container footer-container">
+            <div>
+                <a class="logo footer-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
+                <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+            </div>
+            <div class="social-media">
+                <p class="social-media-title">Social media</p>
+                <ul class="social-media-list">
+                    <li>
+                        <a class="social-media-link" href="https://www.instagram.com/" target="_blank">
+                            <svg width="24" height="24">
+                                <use href="./images/icons/icomoon.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="social-media-link" href="https://x.com/" target="_blank">
+                            <svg width="24" height="24">
+                                <use href="./images/icons/icomoon.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="social-media-link" href="https://www.facebook.com/" target="_blank">
+                            <svg width="24" height="24">
+                                <use href="./images/icons/icomoon.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="social-media-link" href="https://www.linkedin.com/" target="_blank">
+                            <svg width="24" height="24">
+                                <use href="./images/icons/icomoon.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
   </body>
