--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                   <li class="features-list-item">
                       <div class="feature-icon">
                           <svg width="64" height="64">
-                              <use href="./images/icons/icomoon.svg#icon-antenna"></use>
+                              <use href="./images/icons.svg#icon-antenna"></use>
                           </svg>
                       </div>
                       <h3 class="feature-title">Strategy</h3>
@@ -67,7 +67,7 @@
                   <li class="features-list-item">
                       <div class="feature-icon">
                           <svg width="64" height="64">
-                              <use href="./images/icons/icomoon.svg#icon-clock"></use>
+                              <use href="./images/icons.svg#icon-clock"></use>
                           </svg>
                       </div>
                       <h3 class="feature-title">Punctuality</h3>
@@ -78,7 +78,7 @@
                   <li class="features-list-item">
                       <div class="feature-icon">
                           <svg width="64" height="64">
-                              <use href="./images/icons/icomoon.svg#icon-diagram"></use>
+                              <use href="./images/icons.svg#icon-diagram"></use>
                           </svg>
                       </div>
                       <h3 class="feature-title">Diligence</h3>
@@ -87,7 +87,7 @@
                   <li class="features-list-item">
                       <div class="feature-icon">
                           <svg width="64" height="64">
-                              <use href="./images/icons/icomoon.svg#icon-astronaut"></use>
+                              <use href="./images/icons.svg#icon-astronaut"></use>
                           </svg>
                       </div>
                       <h3 class="feature-title">Technologies</h3>
@@ -111,28 +111,28 @@
                               <li>
                                   <a class="team-member-social-link" href="https://www.instagram.com/" target="_blank">
                                       <svg width="16" height="16">
-                                          <use href="./images/icons/icomoon.svg#icon-instagram"></use>
+                                          <use href="./images/icons.svg#icon-instagram"></use>
                                       </svg>
                                   </a>
                               </li>
                               <li>
                                   <a class="team-member-social-link" href="https://x.com/" target="_blank">
                                       <svg width="16" height="16">
-                                          <use href="./images/icons/icomoon.svg#icon-twitter"></use>
+                                          <use href="./images/icons.svg#icon-twitter"></use>
                                       </svg>
                                   </a>
                               </li>
                               <li>
                                   <a class="team-member-social-link" href="https://www.facebook.com/" target="_blank">
                                       <svg width="16" height="16">
-                                          <use href="./images/icons/icomoon.svg#icon-facebook"></use>
+                                          <use href="./images/icons.svg#icon-facebook"></use>
                                       </svg>
                                   </a>
                               </li>
                               <li>
                                   <a class="team-member-social-link" href="https://www.linkedin.com/" target="_blank">
                                       <svg width="16" height="16">
-                                          <use href="./images/icons/icomoon.svg#icon-linkedin"></use>
+                                          <use href="./images/icons.svg#icon-linkedin"></use>
                                       </svg>
                                   </a>
                               </li>
@@ -149,28 +149,28 @@
                               <li>
                                   <a class="team-member-social-link" href="https://www.instagram.com/" target="_blank">
                                       <svg width="16" height="16">
-                                          <use href="./images/icons/icomoon.svg#icon-instagram"></use>
+                                          <use href="./images/icons.svg#icon-instagram"></use>
                                       </svg>
                                   </a>
                               </li>
                               <li>
                                   <a class="team-member-social-link" href="https://x.com/" target="_blank">
                                       <svg width="16" height="16">
-                                          <use href="./images/icons/icomoon.svg#icon-twitter"></use>
+                                          <use href="./images/icons.svg#icon-twitter"></use>
                                       </svg>
                                   </a>
                               </li>
                               <li>
                                   <a class="team-member-social-link" href="https://www.facebook.com/" target="_blank">
                                       <svg width="16" height="16">
-                                          <use href="./images/icons/icomoon.svg#icon-facebook"></use>
+                                          <use href="./images/icons.svg#icon-facebook"></use>
                                       </svg>
                                   </a>
                               </li>
                               <li>
                                   <a class="team-member-social-link" href="https://www.linkedin.com/" target="_blank">
                                       <svg width="16" height="16">
-                                          <use href="./images/icons/icomoon.svg#icon-linkedin"></use>
+                                          <use href="./images/icons.svg#icon-linkedin"></use>
                                       </svg>
                                   </a>
                               </li>
@@ -187,28 +187,28 @@
                               <li>
                                   <a class="team-member-social-link" href="https://www.instagram.com/" target="_blank">
                                       <svg width="16" height="16">
-                                          <use href="./images/icons/icomoon.svg#icon-instagram"></use>
+                                          <use href="./images/icons.svg#icon-instagram"></use>
                                       </svg>
                                   </a>
                               </li>
                               <li>
                                   <a class="team-member-social-link" href="https://x.com/" target="_blank">
                                       <svg width="16" height="16">
-                                          <use href="./images/icons/icomoon.svg#icon-twitter"></use>
+                                          <use href="./images/icons.svg#icon-twitter"></use>
                                       </svg>
                                   </a>
                               </li>
                               <li>
                                   <a class="team-member-social-link" href="https://www.facebook.com/" target="_blank">
                                       <svg width="16" height="16">
-                                          <use href="./images/icons/icomoon.svg#icon-facebook"></use>
+                                          <use href="./images/icons.svg#icon-facebook"></use>
                                       </svg>
                                   </a>
                               </li>
                               <li>
                                   <a class="team-member-social-link" href="https://www.linkedin.com/" target="_blank">
                                       <svg width="16" height="16">
-                                          <use href="./images/icons/icomoon.svg#icon-linkedin"></use>
+                                          <use href="./images/icons.svg#icon-linkedin"></use>
                                       </svg>
                                   </a>
                               </li>
@@ -225,28 +225,28 @@
                               <li>
                                   <a class="team-member-social-link" href="https://www.instagram.com/" target="_blank">
                                       <svg width="16" height="16">
-                                          <use href="./images/icons/icomoon.svg#icon-instagram"></use>
+                                          <use href="./images/icons.svg#icon-instagram"></use>
                                       </svg>
                                   </a>
                               </li>
                               <li>
                                   <a class="team-member-social-link" href="https://x.com/" target="_blank">
                                       <svg width="16" height="16">
-                                          <use href="./images/icons/icomoon.svg#icon-twitter"></use>
+                                          <use href="./images/icons.svg#icon-twitter"></use>
                                       </svg>
                                   </a>
                               </li>
                               <li>
                                   <a class="team-member-social-link" href="https://www.facebook.com/" target="_blank">
                                       <svg width="16" height="16">
-                                          <use href="./images/icons/icomoon.svg#icon-facebook"></use>
+                                          <use href="./images/icons.svg#icon-facebook"></use>
                                       </svg>
                                   </a>
                               </li>
                               <li>
                                   <a class="team-member-social-link" href="https://www.linkedin.com/" target="_blank">
                                       <svg width="16" height="16">
-                                          <use href="./images/icons/icomoon.svg#icon-linkedin"></use>
+                                          <use href="./images/icons.svg#icon-linkedin"></use>
                                       </svg>
                                   </a>
                               </li>
@@ -331,28 +331,28 @@
                     <li>
                         <a class="social-media-link" href="https://www.instagram.com/" target="_blank">
                             <svg width="24" height="24">
-                                <use href="./images/icons/icomoon.svg#icon-instagram"></use>
+                                <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
                         <a class="social-media-link" href="https://x.com/" target="_blank">
                             <svg width="24" height="24">
-                                <use href="./images/icons/icomoon.svg#icon-twitter"></use>
+                                <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
                         <a class="social-media-link" href="https://www.facebook.com/" target="_blank">
                             <svg width="24" height="24">
-                                <use href="./images/icons/icomoon.svg#icon-facebook"></use>
+                                <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
                         <a class="social-media-link" href="https://www.linkedin.com/" target="_blank">
                             <svg width="24" height="24">
-                                <use href="./images/icons/icomoon.svg#icon-linkedin"></use>
+                                <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg>
                         </a>
                     </li>
