Fix team section styles

--- a/index.html
+++ b/index.html
@@ -108,30 +108,30 @@
                           <h3 class="team-member-name">Mark Guerrero</h3>
                           <p class="team-member-position">Product Designer</p>
                           <ul class="team-member-social-list">
-                              <li>
+                              <li class="team-member-social-item">
                                   <a class="team-member-social-link" href="https://www.instagram.com/" target="_blank">
-                                      <svg width="16" height="16">
+                                      <svg class="social-icon" width="16" height="16">
                                           <use href="./images/icons.svg#icon-instagram"></use>
                                       </svg>
                                   </a>
                               </li>
-                              <li>
+                              <li class="team-member-social-item">
                                   <a class="team-member-social-link" href="https://x.com/" target="_blank">
-                                      <svg width="16" height="16">
+                                      <svg class="social-icon" width="16" height="16">
                                           <use href="./images/icons.svg#icon-twitter"></use>
                                       </svg>
                                   </a>
                               </li>
-                              <li>
+                              <li class="team-member-social-item">
                                   <a class="team-member-social-link" href="https://www.facebook.com/" target="_blank">
-                                      <svg width="16" height="16">
+                                      <svg class="social-icon" width="16" height="16">
                                           <use href="./images/icons.svg#icon-facebook"></use>
                                       </svg>
                                   </a>
                               </li>
-                              <li>
+                              <li class="team-member-social-item">
                                   <a class="team-member-social-link" href="https://www.linkedin.com/" target="_blank">
-                                      <svg width="16" height="16">
+                                      <svg class="social-icon" width="16" height="16">
                                           <use href="./images/icons.svg#icon-linkedin"></use>
                                       </svg>
                                   </a>
@@ -148,28 +148,28 @@
                           <ul class="team-member-social-list">
                               <li>
                                   <a class="team-member-social-link" href="https://www.instagram.com/" target="_blank">
-                                      <svg width="16" height="16">
+                                      <svg class="social-icon" width="16" height="16">
                                           <use href="./images/icons.svg#icon-instagram"></use>
                                       </svg>
                                   </a>
                               </li>
                               <li>
                                   <a class="team-member-social-link" href="https://x.com/" target="_blank">
-                                      <svg width="16" height="16">
+                                      <svg class="social-icon" width="16" height="16">
                                           <use href="./images/icons.svg#icon-twitter"></use>
                                       </svg>
                                   </a>
                               </li>
                               <li>
                                   <a class="team-member-social-link" href="https://www.facebook.com/" target="_blank">
-                                      <svg width="16" height="16">
+                                      <svg class="social-icon" width="16" height="16">
                                           <use href="./images/icons.svg#icon-facebook"></use>
                                       </svg>
                                   </a>
                               </li>
                               <li>
                                   <a class="team-member-social-link" href="https://www.linkedin.com/" target="_blank">
-                                      <svg width="16" height="16">
+                                      <svg class="social-icon" width="16" height="16">
                                           <use href="./images/icons.svg#icon-linkedin"></use>
                                       </svg>
                                   </a>
@@ -186,28 +186,28 @@
                           <ul class="team-member-social-list">
                               <li>
                                   <a class="team-member-social-link" href="https://www.instagram.com/" target="_blank">
-                                      <svg width="16" height="16">
+                                      <svg class="social-icon" width="16" height="16">
                                           <use href="./images/icons.svg#icon-instagram"></use>
                                       </svg>
                                   </a>
                               </li>
                               <li>
                                   <a class="team-member-social-link" href="https://x.com/" target="_blank">
-                                      <svg width="16" height="16">
+                                      <svg class="social-icon" width="16" height="16">
                                           <use href="./images/icons.svg#icon-twitter"></use>
                                       </svg>
                                   </a>
                               </li>
                               <li>
                                   <a class="team-member-social-link" href="https://www.facebook.com/" target="_blank">
-                                      <svg width="16" height="16">
+                                      <svg class="social-icon" width="16" height="16">
                                           <use href="./images/icons.svg#icon-facebook"></use>
                                       </svg>
                                   </a>
                               </li>
                               <li>
                                   <a class="team-member-social-link" href="https://www.linkedin.com/" target="_blank">
-                                      <svg width="16" height="16">
+                                      <svg class="social-icon" width="16" height="16">
                                           <use href="./images/icons.svg#icon-linkedin"></use>
                                       </svg>
                                   </a>
@@ -224,28 +224,28 @@
                           <ul class="team-member-social-list">
                               <li>
                                   <a class="team-member-social-link" href="https://www.instagram.com/" target="_blank">
-                                      <svg width="16" height="16">
+                                      <svg class="social-icon" width="16" height="16">
                                           <use href="./images/icons.svg#icon-instagram"></use>
                                       </svg>
                                   </a>
                               </li>
                               <li>
                                   <a class="team-member-social-link" href="https://x.com/" target="_blank">
-                                      <svg width="16" height="16">
+                                      <svg class="social-icon" width="16" height="16">
                                           <use href="./images/icons.svg#icon-twitter"></use>
                                       </svg>
                                   </a>
                               </li>
                               <li>
                                   <a class="team-member-social-link" href="https://www.facebook.com/" target="_blank">
-                                      <svg width="16" height="16">
+                                      <svg class="social-icon" width="16" height="16">
                                           <use href="./images/icons.svg#icon-facebook"></use>
                                       </svg>
                                   </a>
                               </li>
                               <li>
                                   <a class="team-member-social-link" href="https://www.linkedin.com/" target="_blank">
-                                      <svg width="16" height="16">
+                                      <svg class="social-icon" width="16" height="16">
                                           <use href="./images/icons.svg#icon-linkedin"></use>
                                       </svg>
                                   </a>
