Add overlay for all portfolio cards

--- a/index.html
+++ b/index.html
@@ -273,42 +273,55 @@
                       </div>
                   </li>
                   <li class="portfolio-item">
-                      <img class="portfolio-item-image" src="./images/portfolio/cashless-payment.jpg" width="360"
-                           alt="Cashless Payment">
+                      <div class="portfolio-thumb">
+                          <img class="portfolio-item-image" src="./images/portfolio/cashless-payment.jpg" width="360" alt="Cashless Payment">
+                          <p class="portfolio-item-description">14 Stylish and User-Friendly App Design Concepts · Task
+                              Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                      </div>
                       <div class="portfolio-item-content">
                           <h3 class="portfolio-item-name">Cashless Payment</h3>
                           <p class="portfolio-item-category">Marketing</p>
                       </div>
                   </li>
                   <li class="portfolio-item">
-                      <img class="portfolio-item-image" src="./images/portfolio/meditation-app.jpg" width="360"
-                           alt="Meditation App">
+                      <div class="portfolio-thumb">
+                          <img class="portfolio-item-image" src="./images/portfolio/meditation-app.jpg" width="360" alt="Meditation App">
+                          <p class="portfolio-item-description">14 Stylish and User-Friendly App Design Concepts · Task
+                              Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                      </div>
                       <div class="portfolio-item-content">
-
                           <h3 class="portfolio-item-name">Meditation App</h3>
                           <p class="portfolio-item-category">App</p>
                       </div>
                   </li>
                   <li class="portfolio-item">
-                      <img class="portfolio-item-image" src="./images/portfolio/taxi-service.jpg" width="360"
-                           alt="Taxi Service">
+                      <div class="portfolio-thumb">
+                          <img class="portfolio-item-image" src="./images/portfolio/taxi-service.jpg" width="360" alt="Taxi Service">
+                          <p class="portfolio-item-description">14 Stylish and User-Friendly App Design Concepts · Task
+                              Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                      </div>
                       <div class="portfolio-item-content">
-
                           <h3 class="portfolio-item-name">Taxi Service</h3>
                           <p class="portfolio-item-category">Marketing</p>
                       </div>
                   </li>
                   <li class="portfolio-item">
-                      <img class="portfolio-item-image" src="./images/portfolio/screen-illustrations.jpg" width="360"
-                           alt="Screen Illustrations">
+                      <div class="portfolio-thumb">
+                          <img class="portfolio-item-image" src="./images/portfolio/screen-illustrations.jpg" width="360" alt="Screen Illustrations">
+                          <p class="portfolio-item-description">14 Stylish and User-Friendly App Design Concepts · Task
+                              Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                      </div>
                       <div class="portfolio-item-content">
                           <h3 class="portfolio-item-name">Screen Illustrations</h3>
                           <p class="portfolio-item-category">Design</p>
                       </div>
                   </li>
                   <li class="portfolio-item">
-                      <img class="portfolio-item-image" src="./images/portfolio/online-courses.jpg" width="360"
-                           alt="Screen Illustrations">
+                      <div class="portfolio-thumb">
+                          <img class="portfolio-item-image" src="./images/portfolio/online-courses.jpg" width="360" alt="Screen Illustrations">
+                          <p class="portfolio-item-description">14 Stylish and User-Friendly App Design Concepts · Task
+                              Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                      </div>
                       <div class="portfolio-item-content">
                           <h3 class="portfolio-item-name">Online Courses</h3>
                           <p class="portfolio-item-category">Marketing</p>
