--- a/index.html
+++ b/index.html
@@ -334,37 +334,37 @@
 
     <footer class="page-footer">
         <div class="container footer-container">
-            <div>
+            <div class="footer-logo-container">
                 <a class="logo footer-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
                 <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
             </div>
             <div class="social-media">
                 <p class="social-media-title">Social media</p>
                 <ul class="social-media-list">
-                    <li>
+                    <li class="social-media-item">
                         <a class="social-media-link" href="https://www.instagram.com/" target="_blank">
-                            <svg width="24" height="24">
+                            <svg class="social-icon" width="24" height="24">
                                 <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
-                    <li>
+                    <li class="social-media-item">
                         <a class="social-media-link" href="https://x.com/" target="_blank">
-                            <svg width="24" height="24">
+                            <svg class="social-icon" width="24" height="24">
                                 <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
-                    <li>
+                    <li class="social-media-item">
                         <a class="social-media-link" href="https://www.facebook.com/" target="_blank">
-                            <svg width="24" height="24">
+                            <svg class="social-icon" width="24" height="24">
                                 <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
-                    <li>
+                    <li class="social-media-item">
                         <a class="social-media-link" href="https://www.linkedin.com/" target="_blank">
-                            <svg width="24" height="24">
+                            <svg class="social-icon" width="24" height="24">
                                 <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg>
                         </a>
